DDW-418 - Align vertically the "News feed empty" message - container fixes

--- a/source/renderer/app/components/news/NewsFeed.scss
+++ b/source/renderer/app/components/news/NewsFeed.scss
@@ -97,6 +97,10 @@
 
     &.emptyFeedContainer {
       height: 100%;
+
+      .newsFeedEmptyContainer {
+        height: calc(100% - 100px) !important;
+      }
     }
 
     &::-webkit-scrollbar-track {
